// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea Snapshots TextArea with error 1`] = `
.c1 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  border: 1px solid #B4B4B4;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  width: 100%;
  direction: ltr;
  text-align: left;
  border: 1px solid #D8534F;
  background-color: rgba(216,83,79,0.1);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 0.3em;
  margin-bottom: 0.3em;
  line-height: 1.4;
}

.c5 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  width: 0;
  color: #D8534F;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 12px;
}

.c6 {
  margin-left: 1em;
}

.c3 {
  width: 100%;
  height: 100%;
  padding: 0;
  border: none;
  color: #303030;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  caret-color: #F16622;
  font-size: 14px;
  background-color: transparent;
  resize: none;
  outline: none;
}

.c3::-webkit-input-placeholder {
  color: #B4B4B4;
}

.c3::-moz-placeholder {
  color: #B4B4B4;
}

.c3:-ms-input-placeholder {
  color: #B4B4B4;
}

.c3::placeholder {
  color: #B4B4B4;
}

.c3::selection {
  background: rgba(241,102,34,0.1);
}

.c0 {
  display: inline-block;
}

.c2 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 1em;
  box-sizing: border-box;
}

.c2 > label {
  top: 1.5em;
  top: 0;
}

<div
  class="c0"
>
  <div
    class="c1 c2"
  >
    <textarea
      class="c3"
    />
  </div>
  <div
    class="c4"
  >
    <span
      class="c5"
    >
      error message
    </span>
    <span
      class="c6"
    >
      <svg
        aria-hidden="false"
        aria-labelledby="title"
        focusable="false"
        role="img"
        style="vertical-align:middle;fill:#D8534F;width:13px;height:13px"
        viewBox="0 0 217 217"
      >
        <title>
          Warning
        </title>
        <g>
          <rect
            fill="none"
            height="217"
            width="217"
          />
          <path
            d="M109,36.62a9.23,9.23,0,0,1,6.56,2.7,9.74,9.74,0,0,1,1.83,2.61,9.6,9.6,0,0,0,.65,1.12l70.43,122,.15.24a9.27,9.27,0,0,1-8,14.14l-.66,0c-.2,0-.41,0-.62,0h-.52l-141,0h-.56a9.24,9.24,0,0,1-8-4.62,9.29,9.29,0,0,1-.93-7.07l0-.05a8.74,8.74,0,0,1,1.26-2.73,8.13,8.13,0,0,0,.58-1L100.53,42c.12-.19.23-.38.34-.59a8.81,8.81,0,0,1,1.56-2.1A9.23,9.23,0,0,1,109,36.62M31.17,159.81h0M109,27.62A18.22,18.22,0,0,0,96.07,33a17.53,17.53,0,0,0-3.17,4.28h0L22.17,159.81v0a17.73,17.73,0,0,0-2.54,5.52,18.24,18.24,0,0,0,17.65,23h.56l141.53,0h0c.43,0,.85,0,1.28,0a18.27,18.27,0,0,0,15.62-27.89L125.49,38h0a18.68,18.68,0,0,0-3.53-5A18.22,18.22,0,0,0,109,27.62Z"
          />
          <circle
            cx="109"
            cy="158.63"
            r="9"
          />
          <path
            d="M118,131.5a9,9,0,0,1-18,0V77.37a9,9,0,0,1,18,0Z"
          />
        </g>
      </svg>
    </span>
  </div>
</div>
`;

exports[`TextArea Snapshots TextArea with label and maxLength 1`] = `
.c1 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  border: 1px solid #B4B4B4;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  width: 100%;
  direction: ltr;
  text-align: left;
}

.c3 {
  width: 100%;
  height: 100%;
  padding: 0;
  border: none;
  color: #303030;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  caret-color: #F16622;
  font-size: 14px;
  background-color: transparent;
  resize: none;
  outline: none;
}

.c3::-webkit-input-placeholder {
  color: #B4B4B4;
}

.c3::-moz-placeholder {
  color: #B4B4B4;
}

.c3:-ms-input-placeholder {
  color: #B4B4B4;
}

.c3::placeholder {
  color: #B4B4B4;
}

.c3::selection {
  background: rgba(241,102,34,0.1);
}

.c0 {
  display: inline-block;
}

.c2 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 1em;
  box-sizing: border-box;
}

.c2 > label {
  top: 1.5em;
}

<div
  class="c0"
>
  <div
    class="c1 c2"
  >
    <textarea
      class="c3"
    />
  </div>
</div>
`;

exports[`TextArea Snapshots TextArea with label and maxLength 2`] = `
.c3 {
  position: absolute;
  top: 50%;
  left: 1em;
  color: #B4B4B4;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 14px;
  line-height: 1;
  white-space: nowrap;
  pointer-events: none;
  -webkit-transition: 0.15s;
  transition: 0.15s;
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
  transform-origin: left center;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c1 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  border: 1px solid #B4B4B4;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  width: 100%;
  direction: ltr;
  text-align: left;
}

.c4 {
  width: 100%;
  height: 100%;
  padding: 0;
  border: none;
  color: #303030;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  caret-color: #F16622;
  font-size: 14px;
  background-color: transparent;
  resize: none;
  outline: none;
}

.c4::-webkit-input-placeholder {
  color: #B4B4B4;
}

.c4::-moz-placeholder {
  color: #B4B4B4;
}

.c4:-ms-input-placeholder {
  color: #B4B4B4;
}

.c4::placeholder {
  color: #B4B4B4;
}

.c4::selection {
  background: rgba(241,102,34,0.1);
}

.c4::-webkit-input-placeholder {
  color: transparent;
}

.c4::-moz-placeholder {
  color: transparent;
}

.c4:-ms-input-placeholder {
  color: transparent;
}

.c4::placeholder {
  color: transparent;
}

.c0 {
  display: inline-block;
}

.c2 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 1em;
  box-sizing: border-box;
}

.c2 > label {
  top: 1.5em;
}

.c5 {
  padding-top: 0.5em;
  color: #B4B4B4;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 12px;
}

<div
  class="c0"
>
  <div
    class="c1 c2"
  >
    <label
      class="c3"
    >
      label
    </label>
    <textarea
      class="c4"
      label="label"
      maxlength="140"
    />
    <div
      class="c5"
    >
      Characters left: 140
    </div>
  </div>
</div>
`;

exports[`TextArea Snapshots TextArea with placeholder and maxLength 1`] = `
.c1 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  border: 1px solid #B4B4B4;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  width: 100%;
  direction: ltr;
  text-align: left;
}

.c3 {
  width: 100%;
  height: 100%;
  padding: 0;
  border: none;
  color: #303030;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  caret-color: #F16622;
  font-size: 14px;
  background-color: transparent;
  resize: none;
  outline: none;
}

.c3::-webkit-input-placeholder {
  color: #B4B4B4;
}

.c3::-moz-placeholder {
  color: #B4B4B4;
}

.c3:-ms-input-placeholder {
  color: #B4B4B4;
}

.c3::placeholder {
  color: #B4B4B4;
}

.c3::selection {
  background: rgba(241,102,34,0.1);
}

.c0 {
  display: inline-block;
}

.c2 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 1em;
  box-sizing: border-box;
}

.c2 > label {
  top: 1.5em;
}

.c4 {
  padding-top: 0.5em;
  color: #B4B4B4;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 12px;
}

<div
  class="c0"
>
  <div
    class="c1 c2"
  >
    <textarea
      class="c3"
      maxlength="140"
      placeholder="placeholder"
    />
    <div
      class="c4"
    >
      Characters left: 140
    </div>
  </div>
</div>
`;
